Cambios en modulos de produccion y validacion de errores

--- a/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
@@ -144,7 +144,7 @@
                   
                   <button *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '21'" 
                     (click)="informeOperadora(portafolio)" class="dropdown-item" type="button"><i
-                      class="fa fa-pencil"></i> Registro diario</button>
+                      class="fa fa-pencil"></i> Informe de Operadora</button>
 
                       <button *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '21'"
                     (click)="verificarFechas(portafolio)" class="dropdown-item" type="button"><i
