--- a/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
@@ -118,7 +118,7 @@
           <label for="verificacionNovedad"><b>Novedad:</b></label>
         </div>
         <div class="col-md">
-        <p-dropdown [options]="novedad" [(ngModel)]="verificacioNovedad.novedad" readonly></p-dropdown>
+          <input type="text" class="form-control" [(ngModel)]="verificacioNovedad.novedad" >
         </div>
       </div>
     </div>
@@ -262,8 +262,8 @@
         <tbody>
           <tr *ngFor="let editarNovedad of novedadList | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">
 
-            <td> {{editarNovedad.codVerfNov  }}</td>
-            <td>{{editarNovedad.novedad  | JustificadoBitacora }} </td>
+            <td>{{editarNovedad.codVerfNov  }}</td>
+            <td>{{editarNovedad.novedad }} </td>
             <td>{{editarNovedad.justificado | JustificadoBitacora}} </td>
             <td>{{editarNovedad.estado | estadoBitacora}}  </td>
             <td>{{editarNovedad.fecha_actualizacion  | date:'dd-MM-yyyy' }} </td>
