SITP-2 NOMBRE BOTONES DE GUARDAR O CANCELAR

--- a/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
@@ -6,11 +6,11 @@
       <div class="row mt-2">
         <div class="col-md-6 mt-1">
           <button type="button" class="btn btn-sm btn-success btn-block" (click)="guardarPortafolio()"> <i
-              class="fa fa-floppy-o"></i></button>
+              class="fa fa-floppy-o"> </i> Guardar</button>
         </div>
         <div class="col-md-6 mt-1">
           <button type="button" class="btn btn-sm btn-danger btn-block" (click)="goToBuscarPortafolio()">
-            <i class="fa fa-sign-out"></i>
+            <i class="fa fa-sign-out"> </i> Volver
           </button>
         </div>
       </div>
