--- a/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
@@ -6,12 +6,12 @@
       <div class="row mt-2">
         <div class="col-md-8 mt-1">
           <button type="button" class="btn btn-sm btn-success btn-block"
-            (click)="openModalEditarPortafolio(editarPortafolioTemplate)"> <i class="fa fa-floppy-o"></i></button>
+            (click)="openModalEditarPortafolio(editarPortafolioTemplate)"> <i class="fa fa-floppy-o"></i> Guardar</button>
         </div>
 
         <div class="col-md-4 mt-1">
           <button type="button" class="btn btn-sm btn-danger btn-block" (click)="goToBuscarPortafolio()">
-            <i class="fa fa-sign-out"></i>
+            <i class="fa fa-sign-out"></i> Volver
           </button>
         </div>
       </div>
