--- a/src/app/m-trabajo-pozo/componentes/documento-ministerio/documento-ministerio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/documento-ministerio/documento-ministerio.component.html
@@ -167,7 +167,7 @@
 
       <div class="row text-center">
         <div class="col-md-12">
-          <h4>Documentos habilitantes minsterio</h4>
+          <h4>Documentos habilitantes Ministerio Rector</h4>
         </div>
       </div>
 
