--- a/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
+++ b/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
@@ -92,7 +92,7 @@
                   <li>
                     <div *ngIf="doc.urlOficio" class="btn-group dropright">
                       <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{doc.fileOficio.nombre}}
+                        Oficio 
                       </a>
                       <div class="dropdown-menu">
                         <button class="dropdown-item" type="button"
@@ -104,7 +104,7 @@
                   <li>
                     <div *ngIf="doc.urlAnexo1" class="btn-group dropright">
                       <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{doc.fileAnexo1.nombre}}
+                       Anexo 1
                       </a>
                       <div class="dropdown-menu">
                         <button class="dropdown-item" type="button"
@@ -116,7 +116,7 @@
                   <li>
                     <div *ngIf="doc.urlAnexo2" class="btn-group dropright">
                       <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{doc.fileAnexo2.nombre}}
+                        Anexo 2
                       </a>
                       <div class="dropdown-menu">
                         <button class="dropdown-item" type="button"
@@ -128,7 +128,7 @@
                   <li>
                     <div *ngIf="doc.urlAnexo3" class="btn-group dropright">
                       <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{doc.fileAnexo3.nombre}}
+                        Anexo 3
                       </a>
                       <div class="dropdown-menu">
                         <button class="dropdown-item" type="button"
@@ -140,7 +140,7 @@
                   <li>
                     <div *ngIf="doc.urlAnexo4" class="btn-group dropright">
                       <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{doc.fileAnexo4.nombre}}
+                        Anexo 4
                       </a>
                       <div class="dropdown-menu">
                         <button class="dropdown-item" type="button"
@@ -152,7 +152,7 @@
                   <li>
                     <div *ngIf="doc.urlPagos" class="btn-group dropright">
                       <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{doc.filePago.nombre}}
+                        Pago
                       </a>
                       <div class="dropdown-menu">
                         <button class="dropdown-item" type="button"
