--- a/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
+++ b/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
@@ -746,7 +746,7 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-4">
-              <label><b>Nro. factura:*</b></label>
+              <label><b>Nro. factura:</b></label>
             </div>
             <div class="col-md-8">
               <input [(ngModel)]="pago.numeroFactura" pInputText />
