actualizacion de codigos de perfiles v2

--- a/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
@@ -119,7 +119,7 @@
         </thead>
 
 
-        <tbody *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '3' || usuario && usuario.perfil && usuario.perfil.codigoPerfil == '1'">
+        <tbody>
           <tr
             *ngFor="let portafolio of portafolioList| paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;">
          
