--- a/src/app/m-trabajo-bitacora/componentes/editar-verificacion-fechas/editar-verificacion-fechas.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/editar-verificacion-fechas/editar-verificacion-fechas.component.html
@@ -113,7 +113,7 @@
       <div class="col-md-6">
         <div class="row">
           <div class="col-md-4">
-            <label for="campo"><b> Fecha de Presentación Informe Operadora: </b></label>
+            <label for="campo"><b> Fecha Máxima de Presentación Informe Operadora: </b></label>
           </div>
           <div class="col-md">
             <p class="mtop">{{verificarFechas.fechaPresentacion | date:'dd/MM/yyyy' }}</p>
