--- a/src/app/m-trabajo-bitacora/componentes/verificacion-fechas/verificacion-fechas.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-fechas/verificacion-fechas.component.html
@@ -114,7 +114,7 @@
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
-          <label for="campo"><b> Fecha de Presentación Informe Operadora: </b></label>
+          <label for="campo"><b> Fecha Máxima de Presentación Informe Operadora: </b></label>
         </div>
         <div class="col-md">
           <p class="mtop">{{verificarFechas.fechaArch | date:'dd/MM/yyyy' }}</p>
@@ -208,7 +208,7 @@
         </div>
         <div class="col-md">
             <br>
-          <p class="mtop">{{verificarFechas.fecha_actualizacion | date:'dd-MM-yyyy'}}</p>
+          <p class="mtop">{{verificarFechas.fecha_actualizacion | date:'dd/MM/yyyy'}}</p>
         </div>
       </div>
     </div>
