--- a/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
@@ -6,7 +6,8 @@
       <div class="row mt-2">
         <div class="col-md-8 mt-1">
           <button type="button" class="btn btn-sm btn-success btn-block"
-            (click)="openModalEditarPortafolio(editarPortafolioTemplate)"> <i class="fa fa-floppy-o"></i> Guardar</button>
+            (click)="openModalEditarPortafolio(editarPortafolioTemplate)"> <i class="fa fa-floppy-o"></i>
+            Guardar</button>
         </div>
 
         <div class="col-md-4 mt-1">
@@ -96,34 +97,13 @@
     </div>
     <div class="col-md-4">
       <div class="row">
+
         <div class="col-md-12">
           <label><b>Motivo de cambio:</b></label>
-          <p>{{portafolio.motivoCambio}}</p>
-        </div>
-        <div class="col-md-12">
 
-          <table class="table table-striped table-sm">
-            <thead>
-              <tr class="text-center">
-                <th scope="col">Historial del pozo</th>
-
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="text-center">
-                <td>WO1</td>
-              </tr>
-              <tr class="text-center">
-                <td>WO2</td>
-              </tr>
-              <tr class="text-center">
-                <td>WO3</td>
-              </tr>
-              <tr class="text-center">
-                <td>WO4</td>
-              </tr>
-            </tbody>
-          </table>
+          <ul class="list-group nav" *ngFor="let portafolio of portafolioAuditList">
+            <li >{{portafolio.motivoCambio}} - {{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</li>
+          </ul>
 
         </div>
       </div>
